<?xml version="1.0" encoding="utf-8"?>

    <menu tools:context=".CatalogActivity"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never"
        android:id="@+id/action_insert_dummy_data"/>

    <item
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never"
        android:id="@+id/action_delete_all_entries"/>
    <item
        android:id="@+id/coronaDta"
        android:title="CoVid Data"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/orderMeds"
        android:title="@string/orderMeds"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        android:title="share"
        android:icon="@drawable/share1"
        app:showAsAction="ifRoom"/>

</menu>
